--- a/configuration/configs.properties
+++ b/configuration/configs.properties
@@ -1,11 +1,11 @@
-#Wed Aug 02 16:35:34 ICT 2023
+#Wed Aug 02 20:07:56 ICT 2023
 baseUrl=http\://kidolshop.space
 RegisterButton=//input[@type\='submit']
-password=ii4xx27pp03k
+password=3tetobcpa30r9
 UsernameInput=//input[@id\='username']
 RePasswordInput=//input[@id\='repassword']
 registerPath=/register
 loginPath=/login
 PasswordInput=//input[@id\='password']
 LoginButton=//input[@type\='submit']
-username=a6m71ec
+username=l3cui0lyg
