--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,11 @@
           <version>3.141.59</version>
       </dependency>
 
-      <dependency>
-          <groupId>org.testng</groupId>
-          <artifactId>testng</artifactId>
-		  <version>6.14.3</version>
-          <scope>test</scope>
-       </dependency>
+      	<dependency>
+		    <groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>7.4.0</version>
+		</dependency>
        
       <dependency>
 		<groupId>io.github.bonigarcia</groupId>
@@ -54,4 +53,30 @@
 	</dependency>
 
   </dependencies>
+  
+  <build>
+	  <plugins>
+		  
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-compiler-plugin</artifactId>
+		    <version>3.8.1</version>
+		    <configuration>
+		        <source>1.8</source>
+		        <target>1.8</target>
+		    </configuration>
+		</plugin>
+		
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-surefire-plugin</artifactId>
+		    <version>3.0.0-M5</version>
+		    <configuration>
+				<suiteXmlFiles>testng.xml</suiteXmlFiles>
+			</configuration>
+		</plugin>
+		
+	  </plugins>
+  </build>
+  
 </project>
