--- a/configuration/configs.properties
+++ b/configuration/configs.properties
@@ -1,11 +1,11 @@
-#Wed Aug 02 20:07:56 ICT 2023
+#Fri Aug 11 17:12:17 ICT 2023
 baseUrl=http\://kidolshop.space
 RegisterButton=//input[@type\='submit']
-password=3tetobcpa30r9
+password=8ge0y8lajvc2w
 UsernameInput=//input[@id\='username']
 RePasswordInput=//input[@id\='repassword']
 registerPath=/register
 loginPath=/login
 PasswordInput=//input[@id\='password']
 LoginButton=//input[@type\='submit']
-username=l3cui0lyg
+username=a9drxn8
