--- a/configuration/configs.properties
+++ b/configuration/configs.properties
@@ -1,11 +1,11 @@
-#Fri Aug 11 17:12:17 ICT 2023
+#Fri Aug 11 18:38:46 ICT 2023
 baseUrl=http\://kidolshop.space
 RegisterButton=//input[@type\='submit']
-password=8ge0y8lajvc2w
+password=30o55p913ri
 UsernameInput=//input[@id\='username']
 RePasswordInput=//input[@id\='repassword']
 registerPath=/register
 loginPath=/login
 PasswordInput=//input[@id\='password']
 LoginButton=//input[@type\='submit']
-username=a9drxn8
+username=v7r0enat2
