--- a/configuration/configs.properties
+++ b/configuration/configs.properties
@@ -1,11 +1,11 @@
-#Fri Aug 11 18:38:46 ICT 2023
+#Fri Aug 11 18:53:45 ICT 2023
 baseUrl=http\://kidolshop.space
 RegisterButton=//input[@type\='submit']
-password=30o55p913ri
+password=ji9utlaf5azzqvn6
 UsernameInput=//input[@id\='username']
 RePasswordInput=//input[@id\='repassword']
 registerPath=/register
 loginPath=/login
 PasswordInput=//input[@id\='password']
 LoginButton=//input[@type\='submit']
-username=v7r0enat2
+username=l07pngj4e
