--- a/configuration/configs.properties
+++ b/configuration/configs.properties
@@ -1,5 +1,5 @@
 #Fri Aug 11 18:53:45 ICT 2023
-baseUrl=http\://kidolshop.space
+baseUrl=http\://kidolshop.click
 RegisterButton=//input[@type\='submit']
 password=ji9utlaf5azzqvn6
 UsernameInput=//input[@id\='username']
